# advent-of-code

./: README.md
2021/: Day03.go  Day14.ts  Day17.R  Day20.php  README.md  langs.txt  package.json  run.sh
2023/: .gitignore  README.md  main.py  pyproject.toml
2023/solutions/: __init__.py  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py
2023/solutions/lib/: advent.py  download.py  util.py
2025/: .gitignore  README.md  go.mod  go.sum  main.go
2025/lib/: advent.go  args.go
2025/solutions/: day.go  day01.go  day02.go  day03.go  day04.go  day05.go  day06.go  day07.go  day08.go  day09.go  day10.go  day11.go  day12.go  day13.go  day14.go  day15.go  day16.go  day17.go  day18.go  day19.go  day20.go  day21.go  day22.go  day23.go  day24.go  day25.go  utils.go
